// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > 2fa-activee : version texte 1`] = `
"Double authentification activée
Votre compte est mieux protégé.

PORTAIL HABITAT


DOUBLE AUTHENTIFICATION ACTIVÉE

Un code vous sera demandé à chaque connexion depuis un nouvel appareil.

Ce n’était pas moi https://portailhabitat.fr/connexion/lien?t=exemple

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > 2fa-desactivee : version texte 1`] = `
"Double authentification désactivée
Votre compte est moins protégé. C’était vous ?

PORTAIL HABITAT


DOUBLE AUTHENTIFICATION DÉSACTIVÉE

Votre compte n’est plus protégé par un second facteur.

Ce n’était pas moi : sécuriser mon compte https://portailhabitat.fr/connexion/lien?t=exemple

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > bienvenue-particulier : version texte 1`] = `
"Bienvenue sur Portail Habitat
Suivez vos demandes et échangez avec les artisans depuis votre espace.

PORTAIL HABITAT


BIENVENUE SUR PORTAIL HABITAT

Bonjour Camille, votre espace vous permet de suivre vos demandes, de comparer les devis et d’échanger avec les artisans.

Accéder à mon espace https://portailhabitat.fr/connexion/lien?t=exemple

L’équipe Portail Habitat

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > bienvenue-pro : version texte 1`] = `
"Bienvenue sur Portail Habitat Pro, Julien
3 étapes pour que votre fiche soit en ligne et que les demandes arrivent.

PORTAIL HABITAT PRO


BIENVENUE, BERTRAND RÉNOVATION

Votre compte est créé. Pour apparaître dans l’annuaire et recevoir des demandes, il reste 3 étapes rapides.

✓

Créer votre compte

2

Vérifier votre numéro de mobile

3

Déposer votre attestation décennale

4

Compléter votre fiche à 60 % (logo, photos, description)

Accéder à mon espace https://portailhabitat.fr/pro

Une question ? Répondez simplement à cet email, notre équipe vous répond sous 24 h ouvrées.

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > changement-email-alerte : version texte 1`] = `
"Changement de l’adresse email de votre compte
Nouvelle adresse : c•••@e•••.fr. Annulation possible pendant 7 jours.

PORTAIL HABITAT


L’ADRESSE EMAIL DE VOTRE COMPTE VA CHANGER

Une demande de changement vers c•••@e•••.fr a été faite depuis votre compte.

Ce n’était pas moi : annuler https://portailhabitat.fr/connexion/lien?t=exemple

Lien d’annulation valable 7 jours. Le compte est bloqué 24 heures par précaution si vous annulez.

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > changement-email-verifier : version texte 1`] = `
"Confirmez votre nouvelle adresse email
Cliquez pour utiliser cette adresse sur Portail Habitat.

PORTAIL HABITAT


CONFIRMEZ VOTRE NOUVELLE ADRESSE

Bonjour Camille, confirmez que cette adresse vous appartient pour terminer le changement.

Confirmer cette adresse https://portailhabitat.fr/connexion/lien?t=exemple

Lien valable 24 heures.

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > compte-bloque : version texte 1`] = `
"Votre compte est temporairement bloqué
Trop de tentatives de connexion. Débloquez-le en un clic.

PORTAIL HABITAT


VOTRE COMPTE EST TEMPORAIREMENT BLOQUÉ

Nous avons constaté 10 tentatives de connexion infructueuses et bloqué l’accès par précaution.

Débloquer mon compte https://portailhabitat.fr/connexion/lien?t=exemple

Si ce n’était pas vous, changez votre mot de passe après le déblocage.

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > compte-reactive : version texte 1`] = `
"Votre compte est de nouveau actif
Vous pouvez à nouveau vous connecter.

PORTAIL HABITAT


VOTRE COMPTE EST DE NOUVEAU ACTIF

Me connecter https://portailhabitat.fr/connexion/lien?t=exemple

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > compte-suspendu : version texte 1`] = `
"Votre compte a été suspendu
Motif : Non-respect de la charte des avis

PORTAIL HABITAT


VOTRE COMPTE A ÉTÉ SUSPENDU

Motif : Non-respect de la charte des avis

Vous pouvez contester cette décision en répondant à cet email ou depuis la page d’aide.

Contester la décision https://portailhabitat.fr/connexion/lien?t=exemple

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > demande-acces : version texte 1`] = `
"Hugo Martin demande à rejoindre votre équipe
Acceptez en choisissant un rôle, ou refusez.

PORTAIL HABITAT PRO


DEMANDE POUR REJOINDRE VOTRE ÉQUIPE

Hugo Martin souhaite rejoindre Bertrand Rénovation sur Portail Habitat Pro.

« Je suis le nouveau chef de chantier. »

Répondre à la demande https://portailhabitat.fr/pro/equipe

Sans réponse sous 14 jours, la demande expire automatiquement.

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > demande-acces-reponse : version texte 1`] = `
"Bienvenue dans l’équipe Bertrand Rénovation
Rôle : collaborateur.

PORTAIL HABITAT PRO


BIENVENUE DANS L’ÉQUIPE BERTRAND RÉNOVATION

Rôle : Collaborateur

Accéder à l’espace pro https://portailhabitat.fr/pro/equipe

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > document-recu : version texte 1`] = `
"Attestation décennale bien reçue
Vérification sous 48 h ouvrées.

PORTAIL HABITAT PRO


DOCUMENT BIEN REÇU

Document : Attestation décennale

Déposé le : 24 septembre 2026

Notre équipe le vérifie sous 48 h ouvrées. Vous recevrez un email dès la décision.

Voir mes documents https://portailhabitat.fr/pro/inscription?reprise=exemple

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > document-refuse : version texte 1`] = `
"Attestation décennale : document non validé
Motif : Attestation expirée le 31/12/2025. Déposez un nouveau document.

PORTAIL HABITAT PRO


NOUS N’AVONS PAS PU VALIDER VOTRE DOCUMENT

Document : Attestation décennale

Déposé le : 24 septembre 2026

Motif : Attestation expirée le 31/12/2025

Votre fiche reste hors ligne tant qu’un document valide n’est pas déposé.

Déposer un nouveau document https://portailhabitat.fr/pro/inscription?reprise=exemple

Vérification sous 48 h ouvrées après le dépôt.

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > document-valide : version texte 1`] = `
"Attestation décennale validée
Votre document est vérifié.

PORTAIL HABITAT PRO


DOCUMENT VALIDÉ

Document : Attestation décennale

Déposé le : 24 septembre 2026

Le label correspondant apparaît sur votre fiche publique.

Voir ma fiche https://portailhabitat.fr/pro/inscription?reprise=exemple

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > entreprise-existe-deja : version texte 1`] = `
"Quelqu’un a tenté d’inscrire votre entreprise
Une inscription de Bertrand Rénovation a été tentée. C’était un membre de votre équipe ?

PORTAIL HABITAT PRO


TENTATIVE D’INSCRIPTION DE VOTRE ENTREPRISE

Quelqu’un a essayé d’inscrire Bertrand Rénovation, qui a déjà un compte. Il peut vous demander à rejoindre l’équipe.

Si vous ne reconnaissez pas cette démarche, aucune action n’est nécessaire : personne n’a accès à votre compte.

Gérer mon équipe https://portailhabitat.fr/pro/inscription?reprise=exemple

L’équipe Portail Habitat Pro

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > entreprise-fermee : version texte 1`] = `
"Bertrand Rénovation a été fermée
La fiche est retirée de l’annuaire. Les factures restent disponibles.

PORTAIL HABITAT PRO


ENTREPRISE FERMÉE

L’espace de Bertrand Rénovation a été fermé par son propriétaire. La fiche est retirée de l’annuaire.

Les factures restent conservées 10 ans et disponibles sur demande.

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > export-donnees-pret : version texte 1`] = `
"L’export de vos données est prêt
Téléchargeable pendant 7 jours, connexion requise.

PORTAIL HABITAT


L’EXPORT DE VOS DONNÉES EST PRÊT

Télécharger mes données https://portailhabitat.fr/connexion/lien?t=exemple

Lien valable 7 jours. Vous devrez vous connecter pour télécharger le fichier.

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > fiche-en-ligne : version texte 1`] = `
"Votre fiche est en ligne
Bertrand Rénovation apparaît désormais dans l’annuaire de Portail Habitat.

PORTAIL HABITAT PRO


VOTRE FICHE EST EN LIGNE

Félicitations : Bertrand Rénovation est visible par les particuliers de votre zone et peut recevoir des demandes.

BR
Bertrand Rénovation
★ Nouveau · Bordeaux et 25 km
Vérifié · Décennale

Voir ma fiche publique https://portailhabitat.fr/pro/inscription?reprise=exemple


POUR RECEVOIR PLUS DE DEMANDES

1

Ajoutez 3 photos de réalisations

2

Répondez aux demandes en moins de 2 h pour obtenir le label « Réponse rapide »

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > fiche-incomplete : version texte 1`] = `
"Votre fiche est complète à 40 %
À partir de 60 %, votre fiche apparaît dans l’annuaire.

PORTAIL HABITAT PRO


COMPLÉTEZ VOTRE FICHE

Fiche40 %



1

Ajouter votre logo

2

Ajouter 3 photos de réalisations

3

Rédiger votre présentation

Compléter ma fiche https://portailhabitat.fr/pro/inscription?reprise=exemple

L’équipe Portail Habitat Pro

Vous recevez cet email car votre démarche n’est pas terminée. 3 relances au maximum.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > invitation-acceptee : version texte 1`] = `
"Léa Durand a rejoint votre équipe
Rôle : collaborateur.

PORTAIL HABITAT PRO


LÉA DURAND A REJOINT BERTRAND RÉNOVATION

Rôle : Collaborateur

Voir mon équipe https://portailhabitat.fr/pro/equipe

L’équipe Portail Habitat Pro

Vous recevez cet email car les notifications d’activité sont activées.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > invitation-expiree : version texte 1`] = `
"Une invitation a expiré
L’invitation envoyée à l•••@g•••.com n’a pas été acceptée.

PORTAIL HABITAT PRO


INVITATION EXPIRÉE

L’invitation envoyée à l•••@g•••.com n’a pas été acceptée dans les 7 jours.

Renvoyer l’invitation https://portailhabitat.fr/pro/equipe

L’équipe Portail Habitat Pro

Vous recevez cet email car les notifications d’activité sont activées.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > invitation-membre : version texte 1`] = `
"Julien vous invite à rejoindre Bertrand Rénovation
Rôle : collaborateur. Invitation valable 7 jours.

PORTAIL HABITAT PRO


REJOIGNEZ L’ÉQUIPE BERTRAND RÉNOVATION

Julien Bertrand vous invite à gérer les demandes de devis de l’entreprise sur Portail Habitat Pro.

Entreprise : Bertrand Rénovation · Bordeaux

Votre rôle : Collaborateur

Vous pourrez : Répondre aux demandes, envoyer des devis, ajouter des réalisations

Accepter l’invitation https://portailhabitat.fr/pro/invitation?t=exemple

Invitation valable jusqu’au 2 octobre 2026, destinée à l•••@g•••.com. Vous ne connaissez pas Julien Bertrand ? Ignorez cet email.

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > invitation-relance : version texte 1`] = `
"Rappel : Bertrand Rénovation vous attend
Invitation valable jusqu’au 2 octobre 2026.

PORTAIL HABITAT PRO


JULIEN BERTRAND VOUS ATTEND

Vous avez été invité à rejoindre Bertrand Rénovation en tant que collaborateur.

Accepter l’invitation https://portailhabitat.fr/pro/invitation?t=exemple

Invitation valable jusqu’au 2 octobre 2026.

L’équipe Portail Habitat Pro

Vous recevez cet email car votre démarche n’est pas terminée. 3 relances au maximum.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > lien-connexion : version texte 1`] = `
"Votre lien de connexion à Portail Habitat
Valable 1 heure. Si vous n’êtes pas à l’origine de cette demande, ignorez cet email.

PORTAIL HABITAT


CONNECTEZ-VOUS EN UN CLIC

Bonjour Camille, voici votre lien pour accéder à votre espace. Aucun mot de passe n’est nécessaire.

Me connecter https://portailhabitat.fr/connexion/lien?t=exemple

Ce lien est valable 1 heure et ne fonctionne qu’une seule fois.

Vous n’êtes pas à l’origine de cette demande ? Ignorez simplement cet email : personne ne peut se connecter sans ce lien.

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > membre-retire : version texte 1`] = `
"Vous ne faites plus partie de Bertrand Rénovation
Votre accès à l’espace de l’entreprise a été retiré.

PORTAIL HABITAT PRO


ACCÈS RETIRÉ

Bonjour Léa, votre accès à l’espace pro de Bertrand Rénovation a été retiré. Vos messages restent visibles par l’équipe.

Votre compte personnel reste actif.

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > mot-de-passe-modifie : version texte 1`] = `
"Votre mot de passe a été modifié
Safari sur iPhone · 25 septembre 2026 à 08 h 12. C’était vous ?

PORTAIL HABITAT


VOTRE MOT DE PASSE A ÉTÉ MODIFIÉ

Appareil : Safari sur iPhone

Lieu approximatif : Mérignac, France

Date : 25 septembre 2026 à 08 h 12

C’était vous ? Vous n’avez rien à faire.

Ce n’était pas moi https://portailhabitat.fr/connexion/lien?t=exemple

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > mot-de-passe-oublie : version texte 1`] = `
"Réinitialisation de votre mot de passe
Choisissez un nouveau mot de passe. Lien valable 1 heure.

PORTAIL HABITAT


CHOISISSEZ UN NOUVEAU MOT DE PASSE

Nous avons reçu une demande de réinitialisation du mot de passe de votre compte Portail Habitat.

Choisir un nouveau mot de passe https://portailhabitat.fr/connexion/lien?t=exemple

Lien valable 1 heure, utilisable une seule fois. Votre mot de passe actuel reste valable tant que vous n’en choisissez pas un nouveau.

Ce n’était pas vous ? Aucune action n’est nécessaire, mais nous vous conseillons d’activer la double authentification.

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > nouvel-appareil : version texte 1`] = `
"Nouvelle connexion à votre compte
Safari sur iPhone · Mérignac, France · 25 septembre 2026 à 08 h 12. C’était vous ?

PORTAIL HABITAT


NOUVELLE CONNEXION DÉTECTÉE

Votre compte Portail Habitat vient d’être utilisé depuis un appareil que nous ne connaissions pas.

Appareil : Safari sur iPhone

Lieu approximatif : Mérignac, France

Date : 25 septembre 2026 à 08 h 12

C’était vous ? Vous n’avez rien à faire.

Ce n’était pas moi : sécuriser mon compte https://portailhabitat.fr/connexion/lien?t=exemple

Sécuriser votre compte déconnecte tous les appareils et vous demande un nouveau mot de passe.

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > relance-onboarding-1 : version texte 1`] = `
"Il vous reste 2 minutes pour recevoir vos demandes
Votre inscription Bertrand Rénovation est enregistrée à 66 %.

PORTAIL HABITAT PRO


VOTRE INSCRIPTION EST PRESQUE TERMINÉE

Bonjour Julien, vous avez commencé à inscrire Bertrand Rénovation. Reprenez exactement où vous en étiez.

Inscription66 %



✓

Entreprise

✓

Zone et métiers

3

Création du compte

Terminer mon inscription https://portailhabitat.fr/pro/inscription?reprise=exemple

Ce mois-ci, 38 particuliers ont cherché un plombier autour de Bordeaux.

L’équipe Portail Habitat Pro

Vous recevez cet email car votre démarche n’est pas terminée. 3 relances au maximum.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > relance-onboarding-2 : version texte 1`] = `
"38 demandes dans votre zone ce mois-ci
Terminez votre inscription pour les recevoir.

PORTAIL HABITAT PRO


DES PARTICULIERS CHERCHENT UN ARTISAN PRÈS DE CHEZ VOUS

Ce mois-ci, 38 particuliers ont cherché un plombier autour de Bordeaux.

Terminez votre inscription : votre fiche peut être en ligne dès aujourd’hui, gratuitement.

Terminer mon inscription https://portailhabitat.fr/pro/inscription?reprise=exemple

Chiffre estimé à partir des demandes déposées dans votre département.

L’équipe Portail Habitat Pro

Vous recevez cet email car votre démarche n’est pas terminée. 3 relances au maximum.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > relance-onboarding-3 : version texte 1`] = `
"Dernier rappel : votre inscription vous attend
Après cet email, nous ne vous relancerons plus.

PORTAIL HABITAT PRO


DERNIER RAPPEL

Bonjour Julien, l’inscription de Bertrand Rénovation est enregistrée à 66 %. C’est notre dernière relance.

Terminer mon inscription https://portailhabitat.fr/pro/inscription?reprise=exemple

Sans action de votre part, vos informations seront supprimées dans 20 jours.

L’équipe Portail Habitat Pro

Vous recevez cet email car votre démarche n’est pas terminée. 3 relances au maximum.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > reprise-onboarding : version texte 1`] = `
"Reprenez votre inscription où vous l’avez laissée
Inscription de Bertrand Rénovation : vos informations sont enregistrées.

PORTAIL HABITAT PRO


REPRENEZ VOTRE INSCRIPTION

Bonjour Julien, vos informations sont enregistrées. Ce lien vous permet de terminer sur n’importe quel appareil.

Reprendre mon inscription https://portailhabitat.fr/pro/inscription?reprise=exemple

Lien valable 30 jours.

L’équipe Portail Habitat Pro

Vous recevez cet email car votre démarche n’est pas terminée. 3 relances au maximum.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > reprise-simulateur : version texte 1`] = `
"Reprenez votre estimation où vous l’avez laissée
Salle de bain · 6 m² · douche à l’italienne · étape 3 sur 5.

PORTAIL HABITAT


REPRENEZ VOTRE ESTIMATION

Bonjour Camille, votre projet est enregistré. Ce lien vous ramène à l’étape où vous vous êtes arrêté, sur n’importe quel appareil.

Projet : Salle de bain · 6 m² · douche à l’italienne

Étape : 3 sur 5

Reprendre à l’étape 3 https://portailhabitat.fr/simulateur?reprise=exemple

Lien valable 30 jours, utilisable une seule fois. Vous avez demandé ce lien en cochant « M’envoyer un lien pour reprendre plus tard ».

L’équipe Portail Habitat

Vous recevez cet email car votre démarche n’est pas terminée. 3 relances au maximum.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Se désabonner de ces emails https://portailhabitat.fr/api/desabonnement?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > revendication-code : version texte 1`] = `
"Votre code pour revendiquer votre fiche
Fiche Bertrand Rénovation : saisissez ce code pour la gérer.

PORTAIL HABITAT PRO


REVENDIQUEZ VOTRE FICHE

Saisissez ce code pour prendre la main sur la fiche Bertrand Rénovation.

K7Q2M9

Saisir mon code https://portailhabitat.fr/pro/inscription?reprise=exemple

Code valable 30 jours, à usage unique.

L’équipe Portail Habitat Pro

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > revendication-resultat : version texte 1`] = `
"Votre fiche vous appartient
Vous gérez désormais Bertrand Rénovation.

PORTAIL HABITAT PRO


REVENDICATION ACCEPTÉE

Vous gérez désormais la fiche Bertrand Rénovation. Les avis et statistiques sont conservés.

Accéder à mon espace https://portailhabitat.fr/pro/inscription?reprise=exemple

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > role-modifie : version texte 1`] = `
"Votre rôle chez Bertrand Rénovation a changé
Nouveau rôle : gérant.

PORTAIL HABITAT PRO


VOTRE RÔLE A CHANGÉ

Entreprise : Bertrand Rénovation

Nouveau rôle : Gérant

Vous pouvez : Gérer les demandes, la fiche, l’équipe et l’abonnement

Accéder à l’espace pro https://portailhabitat.fr/pro/equipe

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > sieges-suspendus : version texte 1`] = `
"Accès de votre équipe suspendu
3 membre(s) suspendu(s) : réactivez Premium pour leur rendre l’accès.

PORTAIL HABITAT PRO


ACCÈS DE L’ÉQUIPE SUSPENDU

Bertrand Rénovation est passée à l’offre gratuite, qui comprend un seul siège. 3 membre(s) sont suspendus : aucune donnée n’est perdue.

Réactiver Premium https://portailhabitat.fr/pro/equipe

L’équipe Portail Habitat Pro

Vous recevez cet email suite à une action sur Portail Habitat.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > suppression-compte-confirmee : version texte 1`] = `
"Votre compte a été supprimé
Récapitulatif de ce qui est conservé.

PORTAIL HABITAT


VOTRE COMPTE A ÉTÉ SUPPRIMÉ

Bonjour Camille, vos données personnelles ont été effacées.

Conservé : Factures (10 ans, obligation comptable)

Effacé : Profil, préférences, historique de connexion

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > transfert-propriete : version texte 1`] = `
"Transfert de propriété de Bertrand Rénovation
Léa Durand est désormais propriétaire.

PORTAIL HABITAT PRO


TRANSFERT DE PROPRIÉTÉ EFFECTUÉ

Entreprise : Bertrand Rénovation

Nouveau propriétaire : Léa Durand

L’ancien propriétaire devient gérant.

Vous n’êtes pas à l’origine de ce transfert ? Contactez-nous immédiatement.

Voir mon équipe https://portailhabitat.fr/pro/equipe

L’équipe Portail Habitat Pro

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > verifier-email : version texte 1`] = `
"Confirmez votre adresse email
Une dernière étape pour activer votre compte Portail Habitat.

PORTAIL HABITAT


CONFIRMEZ VOTRE ADRESSE EMAIL

Bonjour Camille, cliquez sur le bouton ci-dessous pour confirmer que cette adresse vous appartient.

Confirmer mon adresse https://portailhabitat.fr/connexion/lien?t=exemple

Le bouton ne fonctionne pas ? Copiez ce lien dans votre navigateur : https://portailhabitat.fr/connexion/lien?t=exemple · Valable 24 heures.

L’équipe Portail Habitat

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;

exports[`modèles rédigés (§4.1 à 4.3 et reprise du simulateur) > verifier-telephone : version texte 1`] = `
"Votre code de vérification
Code : 482913. Valable 10 minutes.

PORTAIL HABITAT PRO


VOTRE CODE DE VÉRIFICATION

482913

Valable 10 minutes. Ne le communiquez à personne : Portail Habitat ne vous le demandera jamais.

L’équipe Portail Habitat Pro

Email de sécurité envoyé suite à une action sur votre compte. Il ne peut pas être désactivé.

Mes préférences https://portailhabitat.fr/preferences?t=exemple · Aide https://portailhabitat.fr/aide

Portail Habitat · Raison sociale · Adresse postale"
`;
